--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "apache-server-configs": "^2.14.0",
     "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.0.15",
+    "bootstrap-material-design": "^0.5.10",
     "browser-sync": "^2.14.0",
     "del": "^2.2.2",
     "eslint-config-google": "^0.3.0",
